[package]
name = "markov-trigram"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "markov-web"
path = "src/web_server.rs"

[dependencies]
anyhow = "1.0.100"
rkyv = { version = "0.8.14", features = [] }
rayon = "1.11.0"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0"
rand = "0.10.0"
clap = { version = "4.5", features = ["derive"] }
tokenizers = "0.22.2"
hf-hub = { version = "0.5", features = ["ureq"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.24.0"
